<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".domain.configuration.view.ConfigurationActivity">

    <include layout="@layout/toolbar"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        card_view:cardCornerRadius="8dp"
        android:layout_marginTop="16dp"
        card_view:cardElevation="16dp"
        android:layout_below="@+id/toolbar"
        tools:ignore="UnknownIdInLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textEmail"
                style="@style/texto"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/myemail"
                style="@style/texto"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                style="@style/texto"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        card_view:cardCornerRadius="8dp"
        android:layout_marginTop="16dp"
        card_view:cardElevation="16dp"
        android:layout_below="@+id/cvEmail"
        tools:ignore="UnknownIdInLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passwordd"
                style="@style/texto"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/myemail"
                style="@style/texto"
                android:inputType="textPassword"
                tools:ignore="TextViewEdits" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                style="@style/texto"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvBirthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        card_view:cardCornerRadius="8dp"
        android:layout_marginTop="16dp"
        card_view:cardElevation="16dp"
        android:layout_below="@+id/cvPassword"
        tools:ignore="UnknownIdInLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthdate"
                style="@style/texto"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mybirthdate"
                style="@style/texto"
                android:inputType="date"
                tools:ignore="TextViewEdits" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                style="@style/texto"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvPaymentMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        card_view:cardCornerRadius="8dp"
        android:layout_marginTop="16dp"
        card_view:cardElevation="16dp"
        android:layout_below="@+id/cvBirthdate"
        tools:ignore="UnknownIdInLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paymentMethod"
                style="@style/texto"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                style="@style/texto"
                android:inputType="date"
                tools:ignore="TextViewEdits" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage"
                style="@style/texto"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>