<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_buy"
    tools:context="com.mireya.eventsandroid.domain.account.purchases.view.PurchasesActivity">

    <include layout="@layout/toolbar"/>

    <ImageView
        android:id="@+id/icBuy"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/askBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/askBuy"
        style="@style/texto"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icBuy" />

    <ImageView
        android:id="@+id/like"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/askBuy"
        android:contentDescription="@string/app_name" />

    <ImageView
        android:id="@+id/dislike"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/dislike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/askBuy"
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/next"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btnround"
        android:text="@string/next"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/like" />

</android.support.constraint.ConstraintLayout>